--- a/css/style.css
+++ b/css/style.css
@@ -15,25 +15,21 @@ header {
 li {
   list-style-type: none;
 }
-#nav_top_ul>li{
-  margin-right: 20px;
-    font-size:1.5em;
-    margin-top:30px;
-    margin-bottom: 26px;
+#nav_top_ul > li {
+  font-size: 20px;
+  margin-right: 15px;
+  margin-top:30px;
+  margin-bottom: 26px;
 }
 #nav_top_ul > li:nth-child(1) {
-  margin-left: 10px;
-}
-#nav_sub{
-    width:100px;
-    text-align: center;
+  margin-left: 15px;
 }
 #nav_sub>ul{
-    line-height: 30px;
+  display: flex;
+  background-color:azure;
 }
 #nav_sub>ul>li{
-    font-size:1.5em;
-    padding-bottom: 10px;
+    font-size: 18px;
     padding-left: 10px;
 }
 a{
@@ -46,7 +42,7 @@ a:visited{
     color:black;
 }
 a:hover {
-  color:blue;
+  color:crimson;
 }
 p{
     padding-top:5px;
