--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+body {
+  margin: 0 400px;
+}
 header {
   height: 80px;
   display: flex;
@@ -33,7 +36,7 @@ li {
     padding-left: 10px;
 }
 a{
-    text-decoration-line: none;
+  text-decoration-line: none;
 }
 a:link{
     color:black;
@@ -60,5 +63,6 @@ section {
   margin-bottom: 30px;
 }
 footer {
-  margin: 30px;
+  text-align: center;
+  margin: 100px;
 }
