--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ section {
   margin-bottom: 30px;
 }
 footer {
-  margin: 100px;
+  margin: 100px 100px 0 100px;
   font-size: 14px;
   color:cadetblue;
 }
