--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,36 @@
+@media all and (min-width: 1281px) {
+  body {
+    margin: 0 595px;
+  }
+}
+@media all and (max-width: 1280px) {
+  body {
+    margin: 0 275px;
+  }
+}
+@media all and (max-width: 1080px) {
+  body {
+    margin: 0;
+  }
+}
 header {
   height: 80px;
   display: flex;
 }
 #logo {
-  flex: 5%;
+  flex: 10%;
+  text-align: center;
+  background-color: aliceblue;
+  border-radius: 10px;
+  padding-top: 30px;
+  font-size: 20px;
+  font-weight: 900;
+}
+#logo_a:hover {
+  color: black;
 }
 #nav_top {
-  flex:95%;
+  flex:90%;
   background-color: antiquewhite;
   border-radius: 10px;
 }
@@ -18,12 +42,12 @@ li {
 }
 #nav_top_ul > li {
   font-size: 20px;
-  margin-right: 15px;
+  margin-right: 20px;
   margin-top:30px;
   margin-bottom: 26px;
 }
 #nav_top_ul > li:nth-child(1) {
-  margin-left: 15px;
+  margin-left: 20px;
 }
 #nav_sub>ul{
   display: flex;
@@ -43,17 +67,16 @@ a:link{
 a:visited{
     color:black;
 }
-a:hover {
-  color:crimson;
-}
 p{
   margin-top: 20px;
-  margin-left: 10px;
-  line-height: 30px;
+  margin-left: 20px;
+  line-height: 1.5;
 }
 h1{
-    font-size: 20px;
-  margin: 20px;
+  font-size: 20px;
+  font-style: italic;
+  font-weight: bold;
+  margin: 25px;
 }
 .img_in_content {
   vertical-align: middle;
@@ -66,6 +89,7 @@ section {
   margin-bottom: 30px;
 }
 footer {
+  text-align: center;
   margin: 100px 100px 50px 100px;
   font-size: 14px;
   color:cadetblue;
