--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,12 @@
   body {
     margin: 0;
   }
+  #logo {
+    flex: 5%;
+  }
+  #nav_top {
+    flex: 95%;
+  }
 }
 header {
   height: 80px;
@@ -24,7 +30,6 @@ header {
   border-radius: 10px;
   padding-top: 30px;
   font-size: 20px;
-  font-weight: 900;
 }
 #logo_a:hover {
   color: black;
