--- a/css/style.css
+++ b/css/style.css
@@ -7,14 +7,18 @@
   body {
     margin: 0 275px;
   }
+  #logo {
+    padding-top: 30px;
+  }
 }
 @media all and (max-width: 411px) {
   body {
     margin: 0;
   }
-  #logo_a {
+  #logo {
     writing-mode: vertical-rl;
-    padding-top: 10px;
+    padding-top: 0;
+    padding-right: 20px;
   }
 }
 header {
