--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@
     writing-mode: vertical-rl;
     padding-top: 8px;
   }
+  p {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
 }
 header {
   height: 80px;
