--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,8 @@
     margin-left: 10px;
   }
   .size_down {
-    width: 487.9px;
-    height: 254.1px;
+    width:90%;
+    height:90%;
   }
 }
 header {
