--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
   #logo {
     padding-top: 30px;
   }
-  .img_space {
+  #img_right {
     margin-left:100px;
   }
 }
@@ -24,7 +24,7 @@
   body {
     margin: 0;
   }
-  .img_space {
+  #img_right {
     margin-left:100px;
   }
 }
@@ -47,7 +47,7 @@
   .img_in_content {
     margin-left: 10px;
   }
-  .img_space {
+  #img_right {
     margin-left: 50px;
   }
   .size_down {
