--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,19 @@
 /* 1920 x 1080 해상도 기준 */
-@media (min-width: 1281px) {
+@media (min-width: 1601px) {
   body {
     margin: 0 595px;
+  }
+  #logo {
+    padding-top: 30px;
+  }
+  #img_right {
+    margin-left:100px;
+  }
+}
+/* 1600 x 1080 해상도 기준 */
+@media (max-width: 1600px) {
+  body {
+    margin: 0 320px;
   }
   #logo {
     padding-top: 30px;
