--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
 /* 1280 x 1024 해상도 기준 */
 @media (max-width: 1280px) {
   body {
-    margin: 0 10%;
+    margin: 0 20%;
   }
   #logo {
     padding-top: 30px;
@@ -70,7 +70,12 @@
     width:90%;
     height:90%;
   }
+  iframe {
+    width: 448px;
+    height: 252px;
+  }
 }
+/* - All - */
 header {
   height: 80px;
   display: flex;
